Make headings correspond to their strings.

Always insert all heading strings.

Previously on wayland some heading strings are not inserted.
This creates a discrepancy between heading strings and actual headings,
leading to values being displayed under the wrong column names in
systemmonitor.

BUG: 475722